<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_hello_fill_in_all_the_information"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="20dp"
            android:textColor="@android:color/black"
            android:background="@drawable/custom_bg_btn_grey"
            android:hint="@string/hint_your_name"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_text" />


        <EditText
            android:id="@+id/et_info_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_bg_btn_grey"
            android:hint="@string/hint_your_age"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/ic_age"
            android:drawablePadding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_info_name" />


        <EditText
            android:id="@+id/et_info_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_bg_btn_grey"
            android:hint="@string/hint_job_title"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/ic_job_title"
            android:drawablePadding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_info_age" />

        <EditText
            android:id="@+id/et_info_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_bg_btn_grey"
            android:hint="@string/hint_your_gender"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/ic_gender"
            android:drawablePadding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_info_job" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn_bg"
            android:text="@string/label_save"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_info_gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>